static/css/base.css
/* *************************************** */
/* General colors and variables            */
/* *************************************** */

:root {
	--intra: #00BABC;
	--blue: #3AA2DB;
	--indigo: #6610f2;
	--purple: #B73188;
	--pink: #e83e8c;
	--red: #E52A2D;
	--bg-red: #e3cccc;
	--orange: #EA5C28;
	--yellow: #F2911A;
	--green: #1c7e3f;
	--bg-green: #c9fbd3;
	--teal: #20c997;
	--cyan: #434849;
	--white: #fff;
	--black: #000;
	--gray: #6c757d;
	--gray-dark: #343a40;
	--gray-light: #9aa0a6;
	--gray-lightest: #dee2e6;
	--primary: var(--yellow);
	--secondary: var(--purple);
	--success: #32B796;
	--info: #17a2b8;
	--warning: #F2911A;
	--danger: #E52A2D;
	--light: #f8f9fa;
	--dark: #1d2124;
	--logo: url('/images/logo-light.svg');
}

.logo {
	content: url('/images/logo-light.svg');
}

/* override colors for dark theme */
@media (prefers-color-scheme: dark) {
	:root {
		--light: #000000; /* inverted from --dark */
		--dark: #f8f9fa; /* inverted from --light */
		--gray-dark: #9aa0a6; /* inverted from --gray-light */
		--gray-light: #343a40; /* inverted from --gray-dark */
		--gray-lightest: #252525;
		--bg-green: #46b292;
		--bg-red: #a44244;
		--logo: url('/images/logo-dark.svg');
	}

	.logo {
		content: url('/images/logo-dark.svg');
	}
}

/* *************************************** */
/* Fonts and typography                    */
/* *************************************** */

@font-face {
	font-family: "Bebas Neue";
	src: url('/fonts/bebas-neue/BebasNeue-Regular.ttf');
	font-weight: normal;
}

@font-face {
	font-family: "Museo Sans";
	src: url('/fonts/MuseoSans_500.otf');
	font-weight: normal;
}

@font-face {
	font-family: "Museo Sans";
	src: url('/fonts/MuseoSans_700.otf');
	font-weight: bold;
}

/* *************************************** */
/* General                                 */
/* *************************************** */

html, body {
	margin: 0;
	padding: 0;
	font-family: 'Museo Sans', sans-serif;
	color: var(--dark);
	background-color: var(--light);
}

body {
	min-height: 100vh;
	background-image: url('/images/codam-blur.png');
	background-repeat: no-repeat;
	background-position: bottom right;
	background-size: auto 60%;
	background-attachment: fixed;
}

a {
	text-decoration: none;
	color: var(--primary);
	cursor: pointer;
}

a:hover,
a:active,
a:focus {
	text-decoration: underline;
}

a.external::after {
	content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAQElEQVR42qXKwQkAIAxDUUdxtO6/RBQkQZvSi8I/pL4BoGw/XPkh4XigPmsUgh0626AjRsgxHTkUThsG2T/sIlzdTsp52kSS1wAAAABJRU5ErkJggg==);
	margin: 0 3px 0 5px;
}

@media (prefers-color-scheme: dark) {
	a.external::after {
		content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKAgMAAADwXCcuAAAAAXNSR0IB2cksfwAAAAlwSFlzAAALEwAACxMBAJqcGAAAAAxQTFRFAAAA////////////OMA7qAAAAAR0Uk5TAP9gIFOYGRgAAAAqSURBVAjXY2BgDWAIZQpgcOCcwOCgJsDgMIOBwTmBgcHhgAMDDIaGOgAAgeUG8U0ghIsAAAAASUVORK5CYII=);
	}
}

.logo-light {
	content: url('/images/logo-light.svg');
}

.logo-dark {
	content: url('/images/logo-dark.svg');
}

.logo {
	content: var(--logo);
}

h1, h2, h3, h4, h5, h6 {
	font-family: 'Bebas Neue', sans-serif;
	font-weight: normal;
}

/* *************************************** */
/* Header                                  */
/* *************************************** */

header {
	display: flex;
	position: relative;
	height: 128px;
	padding: 16px;
	justify-content: flex-end;
	align-items: center;
	color: var(--white);
	white-space: nowrap;
}

.header-container-logo {
	flex: 1;
}
header #header-logo {
	display: inline-block;
	height: 128px;
}

header #header-nav {
	text-transform: uppercase;
	justify-content: flex-end;
	padding: 0 16px;
}

header #header-nav a {
	color: var(--dark);
}

header #header-nav a:hover {
	color: var(--primary);
	text-decoration: none;
}

header #dropdown-toggle-btn {
	display: none;
}

/*Scale: header*/
@media (max-width: 1000px) {
	header {
		height: 56px;
	}

	header #header-nav {
		font-size: medium;
	}
	header #header-logo {
		height: 64px;
	}

	header .navigation {
		display: none;
	}

	header #dropdown-toggle-btn {
		display: block;
		background: rgb(0, 0, 0);
		border-style: none;
		color: white;
		font-size: 36px;
	}
}

/* *************************************** */
/* Startup screen                          */
/* *************************************** */

.startup-screen {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	height: 100vh;
	text-align: center;
	padding: 0 32px;
}

.startup-screen .logo {
	max-width: 100%;
	width: 500px;
}

/* *************************************** */
/* Home                                    */
/* *************************************** */

.home-container {
	padding: 8px 48px 48px 64px;
}
.home-container .welcome-box .welcome-text {
	font-size: xx-large;
	font-weight: bold;
}

.home-container .welcome-box .sync {
	font-size: medium;
	font-family: monospace;
	margin-top: 5px;
	margin-bottom: 24px;
}

.home-container .welcome-box .sync::before {
	content: "// ";
	color: var(--pink);
	font-size: small;
	font-family: monospace;
}

.home-grid {
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	gap: 24px;
	word-wrap: break-word;
}

.home-grid .home-grid-container {
	height: 128px;
	border: 1px solid var(--gray);
	padding: 48px 8px 8px 24px;
	color: inherit;
	text-decoration: none;
	border-top-right-radius: 28px;
	corner-shape: bevel;
	backdrop-filter: blur(100px);
	background-color: rgba(0, 0, 0, 0.1);
}

.home-grid .home-grid-container:hover {
	border-color: var(--blue);
}

.home-grid .home-grid-container .container-icon {
	font-size: 36px;
	color: var(--gray);
	border: 1px solid var(--gray);
	padding: 10px 20px 10px 15px;
	border-top-right-radius: 14px;
	corner-shape: bevel;
	margin-bottom: 10px;
}

.home-grid .home-grid-container .container-title {
	font-size: larger;
	font-weight: bold;
	text-transform: uppercase;
}
/* ... */

